# bml

./: .dir-locals.el  .ecp-gitlab-ci.yml  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CMakeLists.txt-bkp  CMakeLists.txt.bkp  CODEOWNERS  CONTRIBUTING.md  Dangerfile  Dockerfile  Dockerfile-bionic  Dockerfile-focal  Dockerfile-hirsute  Dockerfile-impish  Dockerfile-jammy  Dockerfile-noble  Doxyfile.in  Gemfile  LICENSE.md  README.md  README.rst  RELEASEMANAGEMENT.md  build-new.sh  build-old.sh  build.sh  build_bml_cray.sh  build_bml_nvhpc.sh  build_scaling.sh  build_venado_hackathon.sh  clang.list  cmake.list  dangerfile.ts  doitall_gnu  emacs.list  example_build  example_build.sh  example_build.sh-bkp  (+31 more)
cpp_prototype/: CMakeLists.txt
cpp_prototype/src/: CMakeLists.txt  bml.h  bml_allocate.cc  bml_allocate.h  bml_types.cc  bml_types.h
cpp_prototype/tests/: CMakeLists.txt  bml-test.cc
examples/tc-matmul/: CMakeLists.txt  Makefile  README.md  bml_allocate_mptc.cu  bml_deallocate_mptc.cu  bml_import_mptc.cu  bml_multiply_x2_mptc.cu  compile  linalg_tools.cu  main.cc  main.cc.bkp  main.cu  main2.cu  run  sp2_dnn_tcore.cu  tcore_hp_emulator.cu  tcore_hp_emulator.cuh  vars
src/: BMLConfig.cmakein  CMakeLists.txt  bml.F90  bml.pc.in  bml_add.F90  bml_add_dense.F90  bml_add_generic_m.F90  bml_add_m.F90  bml_allocate.F90  bml_allocate_dense.F90  bml_allocate_m.F90  bml_convert.F90  bml_convert_dense.F90  bml_convert_m.F90  bml_copy_m.F90  bml_diagonalize_m.F90  bml_error.F90  bml_error_m.F90  bml_get_bandwidth_m.F90  bml_get_m.F90  bml_initialize.F90  bml_initialize_dense.F90  bml_multiply.F90  bml_multiply_dense.F90  bml_multiply_m.F90  bml_print.F90  bml_print_dense.F90  bml_print_m.F90  bml_scale.F90  bml_scale_m.F90  bml_src_header.F90  bml_trace_m.F90  bml_transpose_m.F90  bml_type.F90  bml_type_dense.F90  bml_type_m.F90  bml_utility_generic_m.F90  bml_utility_m.F90  bml_version.c  macros.h  (+9 more)
src-new/: CMakeLists.txt  bml.h  bml_add.c  bml_allocate.c  bml_allocate.h  bml_convert.c  bml_convert.h  bml_introspection.c  bml_logger.c  bml_logger.h  bml_types.h  bml_utilities.c  bml_utilities.h
src-new/C-interface/: CMakeLists.txt  blas.h  bml.h  bml_add.c  bml_add.h  bml_allocate.c  bml_allocate.h  bml_convert.c  bml_convert.h  bml_copy.c  bml_copy.h  bml_elemental.c  bml_elemental.h  bml_export.c  bml_export.h  bml_import.h  bml_introspection.c  bml_introspection.h  bml_logger.c  bml_logger.h  bml_multiply.c  bml_multiply.h  bml_scale.c  bml_scale.h  bml_threshold.c  bml_threshold.h  bml_trace.c  bml_trace.h  bml_transpose.h  bml_types.h  bml_types_private.h  bml_utilities.c  bml_utilities.h  lapack.h  macros.h  typed.h
src-new/Fortran-interface/: CMakeLists.txt  bml.F90  bml_add.F90  bml_add_m.F90  bml_add_typed_m.F90  bml_allocate.F90  bml_allocate_m.F90  bml_convert.F90  bml_convert_from_dense_wrapper.c  bml_convert_m.F90  bml_copy_m.F90  bml_diagonalize_m.F90  bml_interface.F90  bml_interface_m.F90  bml_introspection.F90  bml_introspection_m.F90  bml_multiply_m.F90  bml_print_matrix_wrapper.c  bml_scale_m.F90  bml_trace_m.F90  bml_transpose_m.F90  bml_types.F90  bml_types_m.F90  bml_utilities.F90  bml_utilities_m.F90  bml_utilities_typed_m.F90
src-new/dense/: CMakeLists.txt  bml_allocate_dense.c  bml_allocate_dense.h  bml_convert_dense.c  bml_convert_dense.h  bml_dense.h  bml_introspection_dense.c  bml_types_dense.h
src-new/fortran-interface/: CMakeLists.txt  bml.F90  bml_allocate.F90  bml_convert.F90  bml_convert_from_dense_wrapper.c  bml_interface.F90  bml_print_matrix_wrapper.c  bml_types.F90  bml_utilities.F90
src/C-interface/: #bml_submatrix.#  CMakeLists.txt  blas.h  bml.h  bml_add.c  bml_add.h  bml_adjacency.c  bml_adjacency.h  bml_adjungate_triangle.c  bml_adjungate_triangle.h  bml_allocate.c  bml_allocate.h  bml_convert.c  bml_convert.h  bml_copy.c  bml_copy.h  bml_diagonalize.c  bml_diagonalize.h  bml_domain.c  bml_domain.h  bml_element_multiply.c  bml_element_multiply.h  bml_elemental.c  bml_elemental.h  bml_export.c  bml_export.h  bml_gershgorin.c  bml_gershgorin.h  bml_getters.c  bml_getters.h  bml_import.c  bml_import.h  bml_init.c  bml_init.h  bml_introspection.c  bml_introspection.h  bml_inverse.c  bml_inverse.h  bml_logger.c  bml_logger.c.indented  (+34 more)
src/Fortran-interface/: CMakeLists.txt  bml.F90  bml_add_m.F90  bml_adjungate_triangle_m.F90  bml_allocate_m.F90  bml_c_interface_m.F90  bml_convert_from_dense_wrapper.c  bml_convert_m.F90  bml_copy_m.F90  bml_diagonalize_m.F90  bml_elemental_m.F90  bml_error_m.F90  bml_export_m.F90  bml_fc_tools_m.F90  bml_gershgorin_m.F90  bml_getters_m.F90  bml_import_m.F90  bml_init_m.F90  bml_interface_m.F90  bml_introspection_m.F90  bml_inverse_m.F90  (+18 more)
temp/: CMakeLists.txt  test_getters.F90  test_getters.c
test-getter/: CMakeLists.txt  ptr.F90  ptr.c
tests/: CMakeLists.txt  README.md  add_matrix.F90  add_matrix.c  add_matrix_dense.F90  add_matrix_typed.c  adjacency.c  adjacency.h  adjacency_matrix.c  adjacency_matrix_typed.c  adjacency_typed.c  adjungate_triangle_matrix_typed.c  allocate_matrix.F90  allocate_matrix.c  allocate_matrix.h  allocate_matrix_typed.c  bandwidth.F90  bml_test.F90  bml_test.c  bml_test.h  convert_matrix.F90  convert_matrix.c  convert_matrix_typed.c  copy_matrix.F90  copy_matrix.c  copy_matrix.h  copy_matrix_typed.c  diagonalize_matrix.F90  diagonalize_matrix.c  diagonalize_matrix_typed.c  gershgorin_matrix.F90  gershgorin_matrix.c  get_bandwidth.F90  get_element.c  get_element_typed.c  get_matrix.F90  get_set_diagonal.c  get_set_diagonal_typed.c  get_sparsity.c  get_sparsity_typed.c  (+61 more)
tests-new/: CMakeLists.txt  add_matrix.F90  add_matrix.c  allocate_matrix.F90  allocate_matrix.c  bml_test.h  convert.c  convert_matrix.F90  convert_matrix.c  copy_matrix.F90  copy_matrix.c  diagonalize_matrix.F90  get_bandwidth.F90  get_matrix.F90  initialize_matrix.F90  multiply_matrix.F90  multiply_matrix.c  scale_matrix.F90  scale_matrix.c  test_driver.F90  test_driver.c  test_m.F90  threshold_matrix.c  trace_matrix.F90  trace_matrix.c  transpose_matrix.F90  transpose_matrix.c
(+1941 files in other folders)
